@@ -16,8 +16,8 @@
 			</last>
 		</scripts>
 		<sql>
-			<db>450</db>
-			<file>450</file>
+			<db>451</db>
+			<file>451</file>
 		</sql>
 	</versions>
 </nzedb>
