@@ -1,0 +1,9 @@
+INSERT INTO release_naming_regexes (id, group_regex, regex, status, description, ordinal)
+VALUES (
+  1159,
+  '^alt\\.binaries\\.movies$',
+  '/^.*?"(?P<match0>.*?)\\.\\w+"\\s+yenc$/i',
+  1,
+  '//BDRips "Daredevil.2003.BDRip.x264-DJ.par2" yEnc',
+  70
+);
