@@ -1157,3 +1157,4 @@ id, group_regex, regex, status, description, ordinal
 1156	^alt\\.binaries\\.howard-stern$	/^.+? \\[\\d+\/\d+\] "(?P<match0>.+?)\.(mp3|nzb).*?" yEnc$/	1	Artie Lange ArtieQuitter Podcast [2/9] "ArtieQuiterPodcast_2015-11-05_161_CF_128k.mp3.par2" yEnc	5
 1157	^alt\\.binaries\\.howard-stern$	/^.+? - File \\d+ of \\d+ - yEnc "(?P<match0>.+?).mp3" \\d+ bytes$/	1	Howard Stern 11.04.2015 CF 32K 57.7MB + WUS - File 1 of 1 - yEnc "Howard Stern 11.04.15 (Alanis Morissette Visits).mp3" 60596352 bytes	10
 1158	^alt\\.binaries\\.howard-stern$	/^(?P<match0>.+?) \\d (?P<match1>\\d+kbps) - \\[\\d+\\/\\d+\\] - ".+?Part_\\d+\\.(mp3|nzb).*?" yEnc$/	1	Howard Stern Show Oct 19 2015 Mon Hour 6 96kbps - [1/1] - "Stern-2015_10_19-96k-Part_06.mp3" yEnc	15
+1159	^alt\\.binaries\\.movies$	/^.*?"(?P<match0>.*?)\\.\\w+"\\s+yenc$/i	1	//BDRips "Daredevil.2003.BDRip.x264-DJ.par2" yEnc	70
